# muffin

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: engine.h
include/muffin_app/: app.h  app.mod.h  args.h  input.h
include/muffin_core/: array.h  common.h  dict.h  filesystem.h  hash.h  hash_map.h  hash_set.h  log.h  math.h  memory.h  module.h  string.h
include/muffin_core/internal/: hash_table.h
include/muffin_data/: data.mod.h  image.h
include/muffin_platform/: dlib.h  filesystem.h  input.h  io.h  monitor.h  platform.mod.h  thread.h  time.h  window.h
include/muffin_render/: backend.h  buffer.h  commands.h  context.h  enums.h  format.h  framebuffer.h  pipeline.h  render.mod.h  renderpass.h  resources.h  shader.h  texture.h
include/muffin_render/backend/: gl_backend.h
include/muffin_render/backends/: gl_backend.h
include/muffin_scene/: layer.h
source/muffin_app/: app.c  app.mod.c
source/muffin_core/: CMakeLists.txt  array.c  common.c  dict.c  hash.c  hash_map.c  hash_set.c  log.c  math.c  memory.c  module.c  string.c
source/muffin_core/internal/: hash_table.c  hash_table.h
source/muffin_core/platform/win32/: filesystem.c
source/muffin_data/: CMakeLists.txt  image.c
source/muffin_platform/: CMakeLists.txt  platform.mod.c
source/muffin_platform/glfw/: context.c  monitor.c  window.c
source/muffin_platform/win32/: dlib.c  filesystem.c  thread.c  time.c
source/muffin_render/: CMakeLists.txt  backend.c  commands.c  context.c  pipeline.c  render.mod.c  resources.c
source/muffin_render/backend/: gl_backend.c
source/muffin_render/backends/: gl_backend.c
source/muffin_render/internal/: backend_manager.c  backend_manager.h
test/: CMakeLists.txt
test/muffin_core/: array_test.c  hash_set_test.c  math_test.c
